Added the librosa package

--- a/5DEEP/Project/notebooks/main-notebook.ipynb
+++ b/5DEEP/Project/notebooks/main-notebook.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -46,6 +46,9 @@
     "\n",
     "# Data\n",
     "import pandas\n",
+    "\n",
+    "# Sound processing\n",
+    "import librosa\n",
     "\n",
     "# Console output\n",
     "from colorama import Fore, Style\n",
@@ -171,15 +174,6 @@
     "- **Sample:** A sample is a value of the signal at a point in time and/or space.\n",
     "- **Sampling rate:** The average number of *samples* obtained in one second, thus $f_{s} = 1/T$. Like the *frequency*, the SI unit is the hertz (Hz). The sampling rate used on most TVs is 48 kHz, which means 48,000 *samples* per second."
    ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false
    }
