Added a paragraph on the normalization of the sound files

--- a/5DEEP/Project/notebooks/main-notebook.ipynb
+++ b/5DEEP/Project/notebooks/main-notebook.ipynb
@@ -122,12 +122,11 @@
    "execution_count": 4,
    "outputs": [],
    "source": [
-    "def load_audio(fold: int, file_name: str, mono: bool = False, resample: bool = False) -> tuple[numpy.ndarray, int]:\n",
+    "def load_audio(fold: int, file_name: str, mono: bool = True, sampling_rate: int | None = 22050) -> tuple[numpy.ndarray, int]:\n",
     "    file_path = URBAN_DATASET_FOLDER / \"audio\" / f\"fold{fold}\" / file_name\n",
-    "    sr = None if not resample else 22050\n",
-    "    y_audio, sampling_rate = librosa.load(file_path, mono=mono, sr=sr)\n",
+    "    y_audio, sr = librosa.load(file_path, mono=mono, sr=sampling_rate)\n",
     "\n",
-    "    return y_audio, sampling_rate"
+    "    return y_audio, sr"
    ],
    "metadata": {
     "collapsed": false
@@ -274,7 +273,7 @@
    ],
    "source": [
     "def get_channel_count(row: pandas.Series) -> int:\n",
-    "    y_audio, _ = load_audio(fold=row[\"fold\"], file_name=row[\"slice_file_name\"])\n",
+    "    y_audio, _ = load_audio(fold=row[\"fold\"], file_name=row[\"slice_file_name\"], mono=False, sampling_rate=None)\n",
     "    channel_count = 1 if (len(y_audio.shape) == 1) else y_audio.shape[0]\n",
     "\n",
     "    return channel_count\n",
@@ -334,7 +333,7 @@
    ],
    "source": [
     "def get_sampling_rate(row: pandas.Series) -> int:\n",
-    "    _, sampling_rate = load_audio(fold=row[\"fold\"], file_name=row[\"slice_file_name\"])\n",
+    "    _, sampling_rate = load_audio(fold=row[\"fold\"], file_name=row[\"slice_file_name\"], mono=False, sampling_rate=None)\n",
     "    return sampling_rate\n",
     "\n",
     "\n",
@@ -356,6 +355,21 @@
     "\n",
     "\n",
     "plot_distrib_sampling_rate(df=data)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Normalization of the sound files\n",
+    "\n",
+    "As we can see from the last two distribution analyses, the sound files in this data set have different properties. Some have only one channel while the majority have two. Most sounds use a standard 44.1 kHz sampling rate, but some do not.\n",
+    "\n",
+    "The difference in channels and/or sample rate should not be a factor used to classify a sound. To eliminate these differences, we will use librosa to resample and merge the channels into a mono sound.\n",
+    "\n",
+    "All sounds will be resampled, on load, to 22.05 kHz. This may not be the best quality, but it is sufficient for our purposes and saves memory during processing."
    ],
    "metadata": {
     "collapsed": false
