Mel spectrogram and Mel Frequency Cepstral Coefficients explanation

--- a/5DEEP/Project/notebooks/main-notebook.ipynb
+++ b/5DEEP/Project/notebooks/main-notebook.ipynb
@@ -376,6 +376,28 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Mel-spectrogram and Mel-frequency cepstral coefficients\n",
+    "In this study, sound files will not be fed into the artificial intelligence model in a raw manner. Instead, we will convert these sounds into images and use them in training a CNN model. We need to find a visual representation of the sound that can meet our needs.\n",
+    "\n",
+    "The most basic visual representation we can think of is the waveform. This graph shows the amplitude against time and makes it easy to see if there is a sound or not. But this type of graph gives little or no information about the frequencies of that sound.\n",
+    "<img src=\"https://i.stack.imgur.com/umKrW.png\" width=\"250\">\n",
+    "\n",
+    "If we need frequency data, we can use a spectrum. A spectrum is a graph that shows amplitude against frequency, which is the frequency domain instead of the time domain. But in this case, we have lost the time dimension.\n",
+    "<img src=\"https://www.sfu.ca/sonic-studio-webdav/handbook/Graphics/Spectrum2.gif\" width=\"250\">\n",
+    "\n",
+    "To keep the time and frequency domains in a single graph, we need a spectrogram. A spectrogram represents time on the x-axis, frequency on the y-axis, and uses color variations to represent the amplitude of each frequency at a given time. This graph has a variant called the Mel spectrogram. The main differences are the use of the Mel scale instead of frequencies on the y-axis and the decibel scale instead of amplitude to indicate the colors. In fact, we'll use a variant of the Mel spectrogram, the Mel Frequency Cepstral Coefficients also known as MFCC. An MFCC uses a quasi-logarithmic spaced frequency scale, which is more similar to how the human auditory system processes sounds.\n",
+    "<img src=\"https://miro.medium.com/max/1400/1*zX-rizZKXXg7Ju-entot9g.png\" width=\"250\">\n",
+    "\n",
+    "### But what is the “Mel”?\n",
+    "In 1937, Stanley Smith Stevens, John Volkman and Edwin Newman proposed the “Mel scale” based on a psychological experiment. The Mel scale is a perceptual scale of pitches judged by listeners to be at equal distances from each other. They concluded that above 500 Hz, progressively larger intervals are judged by listeners to produce equal pitch increments."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "outputs": [],
