MFCC dataframe creation

--- a/5DEEP/Project/notebooks/main-notebook.ipynb
+++ b/5DEEP/Project/notebooks/main-notebook.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "pyplot.style.use(\"ggplot\")"
@@ -92,14 +92,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "# Filesystem paths\n",
     "PARENT_FOLDER = Path.cwd()\n",
-    "DATA_FOLDER = PARENT_FOLDER / \"..\" / \"data\"\n",
+    "DATA_FOLDER = (PARENT_FOLDER / \"..\" / \"data\").resolve()\n",
     "URBAN_DATASET_FOLDER = DATA_FOLDER / \"UrbanSound8K\"\n",
-    "\n",
     "# Matplotlib\n",
     "PLOT_COLORS = pyplot.rcParams[\"axes.prop_cycle\"].by_key()[\"color\"]"
    ],
@@ -119,14 +118,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "def load_audio(fold: int, file_name: str, mono: bool = True, sampling_rate: int | None = 22050) -> tuple[numpy.ndarray, int]:\n",
     "    file_path = URBAN_DATASET_FOLDER / \"audio\" / f\"fold{fold}\" / file_name\n",
-    "    y_audio, sr = librosa.load(file_path, mono=mono, sr=sampling_rate)\n",
+    "    samples, sr = librosa.load(file_path, mono=mono, sr=sampling_rate)\n",
     "\n",
-    "    return y_audio, sr"
+    "    return samples, sr"
    ],
    "metadata": {
     "collapsed": false
@@ -144,14 +143,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "outputs": [
     {
      "data": {
       "text/plain": "      slice_file_name    fsID  start        end  salience  fold  classID  \\\n0    100032-3-0-0.wav  100032    0.0   0.317551         1     5        3   \n1  100263-2-0-117.wav  100263   58.5  62.500000         1     5        2   \n2  100263-2-0-121.wav  100263   60.5  64.500000         1     5        2   \n3  100263-2-0-126.wav  100263   63.0  67.000000         1     5        2   \n4  100263-2-0-137.wav  100263   68.5  72.500000         1     5        2   \n\n              class  \n0          dog_bark  \n1  children_playing  \n2  children_playing  \n3  children_playing  \n4  children_playing  ",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>slice_file_name</th>\n      <th>fsID</th>\n      <th>start</th>\n      <th>end</th>\n      <th>salience</th>\n      <th>fold</th>\n      <th>classID</th>\n      <th>class</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>100032-3-0-0.wav</td>\n      <td>100032</td>\n      <td>0.0</td>\n      <td>0.317551</td>\n      <td>1</td>\n      <td>5</td>\n      <td>3</td>\n      <td>dog_bark</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>100263-2-0-117.wav</td>\n      <td>100263</td>\n      <td>58.5</td>\n      <td>62.500000</td>\n      <td>1</td>\n      <td>5</td>\n      <td>2</td>\n      <td>children_playing</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>100263-2-0-121.wav</td>\n      <td>100263</td>\n      <td>60.5</td>\n      <td>64.500000</td>\n      <td>1</td>\n      <td>5</td>\n      <td>2</td>\n      <td>children_playing</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>100263-2-0-126.wav</td>\n      <td>100263</td>\n      <td>63.0</td>\n      <td>67.000000</td>\n      <td>1</td>\n      <td>5</td>\n      <td>2</td>\n      <td>children_playing</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>100263-2-0-137.wav</td>\n      <td>100263</td>\n      <td>68.5</td>\n      <td>72.500000</td>\n      <td>1</td>\n      <td>5</td>\n      <td>2</td>\n      <td>children_playing</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "outputs": [
     {
      "data": {
@@ -174,7 +173,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "5d5ddb5cc4ef4fdd949b6c7497aefa34"
+       "model_id": "08f8af39b375481c8a1fd6e1746e35e8"
       }
      },
      "metadata": {},
@@ -273,8 +272,8 @@
    ],
    "source": [
     "def get_channel_count(row: pandas.Series) -> int:\n",
-    "    y_audio, _ = load_audio(fold=row[\"fold\"], file_name=row[\"slice_file_name\"], mono=False, sampling_rate=None)\n",
-    "    channel_count = 1 if (len(y_audio.shape) == 1) else y_audio.shape[0]\n",
+    "    samples, _ = load_audio(fold=row[\"fold\"], file_name=row[\"slice_file_name\"], mono=False, sampling_rate=None)\n",
+    "    channel_count = 1 if (len(samples.shape) == 1) else samples.shape[0]\n",
     "\n",
     "    return channel_count\n",
     "\n",
@@ -399,7 +398,148 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "Extracting features...:   0%|          | 0/8732 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "bf7cb507606448e78bdcdfb3efe4d75c"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "def make_mfcc(row: pandas.Series) -> numpy.ndarray:\n",
+    "    samples, sampling_rate = load_audio(fold=row[\"fold\"], file_name=row[\"slice_file_name\"])\n",
+    "    mfcc = librosa.feature.mfcc(y=samples, sr=sampling_rate, n_mfcc=40)\n",
+    "    mfcc_scaled = numpy.mean(mfcc.T, axis=0)\n",
+    "\n",
+    "    return mfcc_scaled\n",
+    "\n",
+    "\n",
+    "def extract_features(df: pandas.DataFrame) -> pandas.DataFrame:\n",
+    "    features_list = []\n",
+    "\n",
+    "    for index, row in tqdm(df.iterrows(), total=df.shape[0], desc=\"Extracting features...\"):\n",
+    "        class_label = row[\"class\"]\n",
+    "        mfcc = make_mfcc(row)\n",
+    "        features_list.append([class_label, mfcc])\n",
+    "\n",
+    "    features_df = pandas.DataFrame(features_list, columns=[\"class\", \"mfcc\"])\n",
+    "    return features_df\n",
+    "\n",
+    "\n",
+    "features = extract_features(df=data)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## TODO: DELETE LATER, FOR TESTING PURPOSE ONLY"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "outputs": [],
+   "source": [
+    "features.to_csv(DATA_FOLDER / \"features_30-01-23_22-21.csv\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "outputs": [],
+   "source": [
+    "import ast\n",
+    "\n",
+    "def recover_numpy_arr(arr_str: str) -> numpy.ndarray:\n",
+    "    arr_str_left_pad = \"[\".join([char.strip() for char in arr_str.split(\"[\")])\n",
+    "    arr_str_right_pad = \"]\".join([char.strip() for char in arr_str_left_pad.split(\"]\")])\n",
+    "    arr_str_parsed = \",\".join(arr_str_right_pad.split())\n",
+    "\n",
+    "    return numpy.array(ast.literal_eval(arr_str_parsed))\n",
+    "\n",
+    "\n",
+    "features_2 = pandas.read_csv(str(DATA_FOLDER / \"features_30-01-23_22-21.csv\"), converters={\"mfcc\": recover_numpy_arr}, index_col=0)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              class                                               mfcc\n",
+      "0          dog_bark  [-214.35951, 66.00463, -126.225266, -57.349586...\n",
+      "1  children_playing  [-420.23825, 103.904526, -47.55043, 55.606483,...\n",
+      "2  children_playing  [-455.2568, 116.408104, -41.6107, 47.207104, 4...\n",
+      "3  children_playing  [-409.9394, 96.08554, -29.91929, 47.63835, 6.7...\n",
+      "4  children_playing  [-442.84656, 108.39454, -47.17804, 55.187874, ...\n",
+      "class    object\n",
+      "mfcc     object\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(features.head())\n",
+    "print(features.dtypes)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              class                                               mfcc\n",
+      "0          dog_bark  [-214.359512, 66.004631, -126.225266, -57.3495...\n",
+      "1  children_playing  [-420.23825, 103.904526, -47.55043, 55.606483,...\n",
+      "2  children_playing  [-455.256805, 116.408104, -41.6106987, 47.2071...\n",
+      "3  children_playing  [-409.9394, 96.08554, -29.91929, 47.63835, 6.7...\n",
+      "4  children_playing  [-442.84656, 108.39454, -47.17804, 55.187874, ...\n",
+      "class    object\n",
+      "mfcc     object\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(features_2.head())\n",
+    "print(features_2.dtypes)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "outputs": [],
    "source": [],
    "metadata": {
