--- a/5DEEP/Project/notebooks/en/1-Data_analysis.ipynb
+++ b/5DEEP/Project/notebooks/en/1-Data_analysis.ipynb
@@ -7,10 +7,10 @@
     "The following notebook has been created for a school project on audio classification. The subject and the questions are available in the appendix.\n",
     "\n",
     "The group members who participated in this project are:\n",
-    "    - BEZIN Théo\n",
-    "    - LAMINE AMIMI Mohamed\n",
-    "    - LECOMTE Alexis\n",
-    "    - PAWLOWSKI Maxence\n",
+    "- BEZIN Théo\n",
+    "- LAMINE AMIMI Mohamed\n",
+    "- LECOMTE Alexis\n",
+    "- PAWLOWSKI Maxence\n",
     "\n",
     "### Main index\n",
     "1. **Data analysis (you are here)**\n",
@@ -78,7 +78,7 @@
     "<div style=\"margin: 20px 0; padding: 10px; background-color: #D9EDF7; color: #31708F; border-left: solid #31708F 4px; border-radius: 4px\">\n",
     "    <span>\n",
     "        <p style=\"margin-top: 0; text-align: left;\"><b>Note</b></p>\n",
-    "        <p>\n",
+    "        <p style=\"margin-bottom: 0;\">\n",
     "            These rules should only be followed if we want to compare our results with other research papers on the same data set. In our case, we will use a different method. Therefore, our performance score cannot be compared with other models outside our notebooks.\n",
     "        </p>\n",
     "    </span>\n",
@@ -100,11 +100,14 @@
     "- **Frequency:** The number of occurrences of a repeating event per unit of time. The frequency is measured in hertz (Hz) which is equal to one event per second.\n",
     "- **Audio frequency:** A periodic vibration whose *frequency* is audible to the average human. Like the *frequency*, the SI unit is the hertz (Hz). It is the property of sound that most determines pitch.\n",
     "- **Amplitude:** The amplitude of a periodic variable is a measure of its change in a single unit of time (period).\n",
+    "\n",
     "    <img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/8/8a/Sine_voltage.svg/600px-Sine_voltage.svg.png\" width=\"250\">\n",
+    "\n",
     "    _1. Peak amplitude ($û$)_\n",
     "    _2. Peak-to-peak amplitude ($2û$)_\n",
     "    _3. Root mean square amplitude ($û/\\sqrt{2}$)_\n",
     "    _4. Wave period (not an amplitude)_\n",
+    "\n",
     "- **Channels:** An audio channel is an audio source. The number of channels determines the type of audio file:\n",
     "    - <u>Monophonic sound reproduction (mono):</u> A sound intended to be heard as if it were emanating from one position. Monaural sound has largely been replaced by *stereo* sound, but remains the standard for radiotelephone communications, telephone networks and audio induction loops for use with hearing aids.\n",
     "    - <u>Stereophonic sound (stereo):</u> A method that recreates a multi-directional, 3-dimensional audible perspective. This is usually achieved by using two independent audio channels through a configuration of two speakers in a such way as to create the impression of sound heard from various directions, as in natural hearing.\n",
