--- a/5DEEP/Project/notebooks/en/1-Data_analysis.ipynb
+++ b/5DEEP/Project/notebooks/en/1-Data_analysis.ipynb
@@ -17,7 +17,7 @@
     "2. Data preprocessing\n",
     "3. Basic ANN model\n",
     "4. The CNN model\n",
-    "5. Testing our best model\n"
+    "5. Testing our best model"
    ],
    "metadata": {
     "collapsed": false
@@ -187,7 +187,7 @@
    "cell_type": "markdown",
    "source": [
     "### C.3 - Constants\n",
-    "We also define some constants used in this notebook. If you clone this project, be careful when changing these constants and remember to apply the changes in all notebooks."
+    "We also define some constants used in this notebook. If you clone this project, be careful when changing these constants and remember to apply the changes in all notebooks. You may notice that we have defined a random state. Although it is never used for final models, it is useful when we try to compare the performance of different models on the same dataset."
    ],
    "metadata": {
     "collapsed": false
