Added a paragraph about the Mel scale

--- a/5DEEP/Project/notebooks/en/2-Data_preprocessing.ipynb
+++ b/5DEEP/Project/notebooks/en/2-Data_preprocessing.ipynb
@@ -34,6 +34,7 @@
     "  <li>Notebook initialization</li>\n",
     "  <li>How to normalize?</li>\n",
     "  <li>Normalizing the dataset</li>\n",
+    "  <li>Conclusion of the data preprocessing</li>\n",
     "</ol>"
    ],
    "metadata": {
@@ -439,7 +440,10 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### B.7 - Which output to choose?\n",
+    "### B.7 - But what is \"Mel\"?\n",
+    "In 1937, Stanley Smith Stevens, John Volkman and Edwin Newman proposed the “Mel scale” based on a psychological experiment. The Mel scale is a perceptual scale of pitches judged by listeners to be at equal distances from each other. They concluded that above 500 Hz, progressively larger intervals are judged by listeners to produce equal pitch increments.\n",
+    "\n",
+    "### B.8 - Which output to choose?\n",
     "The previous comparisons have clearly shown that the Mel spectrogram is the best option for our needs. But before transforming each sound into a Mel spectrogram, we need to normalize them."
    ],
    "metadata": {
