--- a/5DEEP/Project/notebooks/en/2-Data_preprocessing.ipynb
+++ b/5DEEP/Project/notebooks/en/2-Data_preprocessing.ipynb
@@ -72,10 +72,7 @@
     "\n",
     "# Console output\n",
     "from colorama import Fore, Style\n",
-    "from tqdm.notebook import tqdm\n",
-    "\n",
-    "# Misc.\n",
-    "import ast"
+    "from tqdm.notebook import tqdm"
    ],
    "metadata": {
     "collapsed": false
@@ -95,7 +92,7 @@
    "execution_count": 149,
    "outputs": [],
    "source": [
-    "pyplot.style.use(\"ggplot\")"
+    "pyplot.style.use(\"ggplot\")  # Set the matplotlib style"
    ],
    "metadata": {
     "collapsed": false
@@ -119,6 +116,7 @@
     "PARENT_FOLDER = Path.cwd()\n",
     "DATA_FOLDER = (PARENT_FOLDER / \"..\" / \"..\" / \"data\").resolve()\n",
     "URBAN_DATASET_FOLDER = DATA_FOLDER / \"UrbanSound8K\"\n",
+    "MODELS_FOLDER = (PARENT_FOLDER / \"..\" / \"..\" / \"models\").resolve()\n",
     "TEMP_FOLDER = (PARENT_FOLDER / \"..\" / \"..\" / \"temp\").resolve()\n",
     "\n",
     "# Dataset\n",
