--- a/5DEEP/Project/notebooks/en/1-Data_analysis.ipynb
+++ b/5DEEP/Project/notebooks/en/1-Data_analysis.ipynb
@@ -177,7 +177,7 @@
    "execution_count": 122,
    "outputs": [],
    "source": [
-    "pyplot.style.use(\"ggplot\")"
+    "pyplot.style.use(\"ggplot\")  # Set the matplotlib style"
    ],
    "metadata": {
     "collapsed": false
@@ -202,6 +202,7 @@
     "PARENT_FOLDER = Path.cwd()\n",
     "DATA_FOLDER = (PARENT_FOLDER / \"..\" / \"..\" / \"data\").resolve()\n",
     "URBAN_DATASET_FOLDER = DATA_FOLDER / \"UrbanSound8K\"\n",
+    "MODELS_FOLDER = (PARENT_FOLDER / \"..\" / \"..\" / \"models\").resolve()\n",
     "TEMP_FOLDER = (PARENT_FOLDER / \"..\" / \"..\" / \"temp\").resolve()\n",
     "\n",
     "# Matplotlib\n",
