--- a/5DEEP/Project/notebooks/en/4-The_CNN_model.ipynb
+++ b/5DEEP/Project/notebooks/en/4-The_CNN_model.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "The group members who participated in this project are:\n",
     "- BEZIN Théo\n",
-    "- LAMINE AMIMI Mohamed\n",
+    "- LAMINE AMIMI \n",
     "- LECOMTE Alexis\n",
     "- PAWLOWSKI Maxence\n",
     "\n",
