Notebook intro fix

--- a/5DEEP/Project/notebooks/en/2-Data_preprocessing.ipynb
+++ b/5DEEP/Project/notebooks/en/2-Data_preprocessing.ipynb
@@ -7,8 +7,8 @@
     "The following notebook has been created for a school project on audio classification. The subject and the questions are available in the appendix.\n",
     "\n",
     "The group members who participated in this project are:\n",
+    "- AMIMI Lamine\n",
     "- BEZIN Théo\n",
-    "- LAMINE AMIMI Mohamed\n",
     "- LECOMTE Alexis\n",
     "- PAWLOWSKI Maxence\n",
     "\n",
@@ -17,7 +17,8 @@
     "2. **Data preprocessing (you are here)**\n",
     "3. Basic ANN model\n",
     "4. The CNN model\n",
-    "5. Testing our best model"
+    "5. Testing our best model\n",
+    "6. Data augmentation"
    ],
    "metadata": {
     "collapsed": false
