Added the model competition before the trainings

--- a/5DEEP/Project/notebooks/en/2-Data_preprocessing.ipynb
+++ b/5DEEP/Project/notebooks/en/2-Data_preprocessing.ipynb
@@ -17,7 +17,7 @@
     "2. **Data preprocessing (you are here)**\n",
     "3. Basic ANN model\n",
     "4. The CNN model\n",
-    "5. Testing our best model\n",
+    "5. The model competition\n",
     "6. Data augmentation"
    ],
    "metadata": {
@@ -469,42 +469,13 @@
     }
    ],
    "source": [
-    "def fix_samples_length(samples: numpy.ndarray, sampling_rate: int, duration_sec: int) -> numpy.ndarray:\n",
-    "    required_samples = duration_sec * sampling_rate\n",
-    "    samples_count = len(samples)\n",
-    "\n",
-    "    if samples_count < required_samples:  # Pad the audio\n",
-    "        return librosa.util.pad_center(data=samples, size=required_samples, mode=\"constant\")\n",
-    "    elif samples_count > required_samples:  # Truncate the audio\n",
-    "        return librosa.util.fix_length(data=samples, size=required_samples, mode=\"constant\")\n",
-    "    else:  # No operation needed\n",
-    "        return samples\n",
-    "\n",
-    "\n",
-    "def make_mel_spectrogram(row: pandas.Series, n_fft: int = 2048, hop_length: int = None, n_mels: int = N_MELS, duration_sec: int = None) -> numpy.ndarray:\n",
-    "    if hop_length is None:\n",
-    "        hop_length = (n_fft // 4)\n",
-    "\n",
-    "    samples, sampling_rate = helpers.urban_df.load_audio(dataset_folder=URBAN_DATASET_FOLDER, fold=row[\"fold\"], file_name=row[\"slice_file_name\"])\n",
-    "\n",
-    "    if duration_sec:  # Pad/truncate the samples\n",
-    "        samples = fix_samples_length(samples=samples, sampling_rate=sampling_rate, duration_sec=duration_sec)\n",
-    "\n",
-    "    samples_normalized = librosa.util.normalize(samples)\n",
-    "    mel = librosa.feature.melspectrogram(y=samples_normalized, sr=sampling_rate, n_fft=n_fft, hop_length=hop_length, n_mels=n_mels)\n",
-    "    mel_db = librosa.amplitude_to_db(numpy.abs(mel))\n",
-    "    mel_normalized = librosa.util.normalize(mel_db)\n",
-    "\n",
-    "    return mel_normalized\n",
-    "\n",
-    "\n",
     "def extract_features(df: pandas.DataFrame, n_mels: int = N_MELS, duration_sec: int = None) -> pandas.DataFrame:\n",
     "    features_list = []\n",
     "\n",
     "    for index, row in tqdm(df.iterrows(), total=df.shape[0], desc=\"Extracting features...\"):\n",
     "        # Extract features\n",
     "        class_label = row[\"class\"]\n",
-    "        mel = make_mel_spectrogram(row=row, n_mels=n_mels, duration_sec=duration_sec)\n",
+    "        mel = helpers.audio.make_mel_spectrogram(dataset_folder=URBAN_DATASET_FOLDER, row=row, n_mels=n_mels, duration_sec=duration_sec)\n",
     "\n",
     "        # Append to the features list\n",
     "        features_list.append([class_label, mel])\n",
