--- a/5DEEP/Project/notebooks/en/3-Basic_ANN_model.ipynb
+++ b/5DEEP/Project/notebooks/en/3-Basic_ANN_model.ipynb
@@ -17,7 +17,7 @@
     "2. Data preprocessing\n",
     "3. **Basic ANN model (you are here)**\n",
     "4. The CNN model\n",
-    "5. Testing our best model\n",
+    "5. The model competition\n",
     "6. Data augmentation"
    ],
    "metadata": {
