--- a/5DEEP/Project/notebooks/en/4-The_CNN_model.ipynb
+++ b/5DEEP/Project/notebooks/en/4-The_CNN_model.ipynb
@@ -17,7 +17,7 @@
     "2. Data preprocessing\n",
     "3. Basic ANN model\n",
     "4. **The CNN model (you are here)**\n",
-    "5. Testing our best model\n",
+    "5. The model competition\n",
     "6. Data augmentation"
    ],
    "metadata": {
@@ -343,7 +343,7 @@
     "    keras.layers.Dense(64, activation=\"relu\"),\n",
     "    keras.layers.Dropout(rate=0.5),\n",
     "\n",
-    "    # Second dense block. Using softmax to reduce to output to 1\n",
+    "    # Second dense block. Using softmax to reduce to output to 10\n",
     "    keras.layers.Dense(len(CLASSES), activation=\"softmax\")\n",
     "])\n",
     "\n",
