--- a/5DEEP/Project/notebooks/en/6-Data_augmentation.ipynb
+++ b/5DEEP/Project/notebooks/en/6-Data_augmentation.ipynb
@@ -17,7 +17,7 @@
     "2. Data preprocessing\n",
     "3. Basic ANN model\n",
     "4. The CNN model\n",
-    "5. Testing our best model\n",
+    "5. The model competition\n",
     "6. **Data augmentation (you are here)**"
    ],
    "metadata": {
