Add information about the DCT filter

--- a/5DEEP/Project/notebooks/en/2-Data_preprocessing.ipynb
+++ b/5DEEP/Project/notebooks/en/2-Data_preprocessing.ipynb
@@ -329,7 +329,7 @@
    "cell_type": "markdown",
    "source": [
     "### B.5 - Mel-Frequency Cepstral Coefficients (MFCCs)\n",
-    "To fix the issue of the spectrogram, we can use a variant of it that use the Mel scale. In fact, we'll use a variant of the Mel spectrogram, the Mel Frequency Cepstral Coefficients (MFCC) also known as MFCC. An MFCC uses a quasi-logarithmic spaced frequency scale, which is more similar to how the human auditory system processes sounds."
+    "To fix the issue of the spectrogram, we can use a variant of it that use the Mel scale. In fact, we'll use a variant of the Mel spectrogram, the Mel Frequency Cepstral Coefficients (MFCC) also known as MFCC. An MFCC uses a quasi-logarithmic spaced frequency scale, which is more similar to how the human auditory system processes sounds. A Discrete Cosine Transform (DCT) is applied to the spectrogram to filter some data. This type of spectrogram is mainly used in speech recognition algorithms."
    ],
    "metadata": {
     "collapsed": false
@@ -371,7 +371,7 @@
    "cell_type": "markdown",
    "source": [
     "### B.6 - Mel spectrogram\n",
-    "We are getting close to our needs with the MFCC, but there is still one small problem. As we can see, the MFCC is almost a single color. This can be a problem when our models try to extract features from it. MFCCs are widely used in speech recognition models. The URBANSOUND dataset contains mechanical sounds, human voices and music. Therefore, the Mel spectrogram will perform better because it retains more features of the original sound."
+    "We are getting closer to our needs with the MFCC, but there is still one small problem. As we can see, the MFCC is almost one color. This is due to the DCT filtering out some of the data. This can be a problem when our models try to extract features from it. As mentioned earlier, MFCCs are widely used in speech recognition models. Our dataset contains mechanical sounds, music and almost no human voice, except for the classes `children_playing` and `street_music`. It makes sense to use an MFCC without a DCT filter applied to it. As a result, the Mel spectrogram will perform better because it retains more of the original sound. A Mel spectrogram is halfway between the basic spectrogram and the MFCC."
    ],
    "metadata": {
     "collapsed": false
