Added the appendix

--- a/5DEEP/Project/notebooks/en/5-The_model_competition.ipynb
+++ b/5DEEP/Project/notebooks/en/5-The_model_competition.ipynb
@@ -18,7 +18,8 @@
     "3. Basic ANN model\n",
     "4. The CNN model\n",
     "5. **The model competition (you are here)**\n",
-    "6. Data augmentation"
+    "6. Data augmentation\n",
+    "7. _Appendix_"
    ],
    "metadata": {
     "collapsed": false
