--- a/5DEEP/Project/notebooks/en/6-Data_augmentation.ipynb
+++ b/5DEEP/Project/notebooks/en/6-Data_augmentation.ipynb
@@ -18,7 +18,8 @@
     "3. Basic ANN model\n",
     "4. The CNN model\n",
     "5. The model competition\n",
-    "6. **Data augmentation (you are here)**"
+    "6. **Data augmentation (you are here)**\n",
+    "7. _Appendix_"
    ],
    "metadata": {
     "collapsed": false
