--- a/5DEEP/Project/notebooks/en/4-The_CNN_model.ipynb
+++ b/5DEEP/Project/notebooks/en/4-The_CNN_model.ipynb
@@ -18,7 +18,8 @@
     "3. Basic ANN model\n",
     "4. **The CNN model (you are here)**\n",
     "5. The model competition\n",
-    "6. Data augmentation"
+    "6. Data augmentation\n",
+    "7. _Appendix_"
    ],
    "metadata": {
     "collapsed": false
